        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : normal
Bugzilla   : 13521
Description: Update kernel patches for SLES10 2.6.16.53-0.8.
Details    : Update which_patch & target file for SLES10 latest kernel.

Severity   : enhancement
Bugzilla   : 13128
Description: add --type and --size parameters to lfs find
Details    : Enhance lfs find by adding filetype and filesize parameters. Also
	     multiple OBDs can now be specified for the --obd option.

Severity   : enhancement
Bugzilla   : 11270
Description: eliminate client locks in face of contention
Details    : file contention detection and lockless i/o implementation
	     for contended files.

Severity   : normal
Bugzilla   : 12411
Description: Remove client patches from SLES 10 kernel.
Details    : This causes SLES 10 clients to behave as patchless clients
	     even on a Lustre-patched (server) kernel.

Severity   : minor
Bugzilla   : 2369 
Description: use i_size_read and i_size_write in 2.6 port
Details    : replace inode->i_size access with i_size_read/write()

Severity   : normal
Frequency  : when removing large files
Bugzilla   : 13181
Description: scheduling issue during removal of large Lustre files
Details    : Don't take the BKL in fsfilt_ext3_setattr() for 2.6 kernels.
	     It causes scheduling issues when removing large files (17TB in the
	     present case).

Severity   : normal
Bugzilla   : 13358
Description: 1.4.11 Can't handle directories with stripe set and extended acls
Details    : Impossible (EPROTO is returned) to access a directory that has a
	     non-default striping and ACLs.

Severity   : normal
Frequency  : only on ppc
Bugzilla   : 12234
Description: /proc/fs/lustre/devices broken on ppc